# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  vcpkg.json
include/: Camera.hpp  Events.hpp  Shader.hpp  Texture.hpp  Window.hpp
include/blocks/: Block.hpp  Chunk.hpp  Chunks.hpp
include/graphics/: BlockRenderer.hpp  Camera.hpp  Mesh.hpp
include/noise/: PerlinNoise.hpp  perlin_noise.hpp  perlin_noise2d.hpp  perlin_noise3d.hpp
include/structures/: PackedFreelist.hpp  RingBuffer.hpp  ThreadPool.hpp
res/: core.vert
res/shaders/: core.vert
src/: main.cpp
src/blocks/: Block.cpp  Block.hpp  BlockRegistry.cpp  BlockRegistry.hpp  Chunk.cpp  Chunk.hpp  ChunkCompressor.cpp  ChunkCompressor.hpp  ChunkInfo.hpp  ChunkRLE.cpp  ChunkRLE.hpp  Chunks.cpp  Chunks.hpp  chunk_utils.hpp
src/blocks/raycast/: Raycasting.cpp  Raycasting.hpp
src/graphics/: BlockRenderer.cpp  Camera.cpp  Camera.hpp  Frustum.hpp  Instance.hpp  Mesh.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Transform.hpp
src/graphics/model/: CubeMesh.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  ModelManager.hpp
src/graphics/renderer/: BlockRenderer.cpp  BlockRenderer.hpp  ChunkDrawBuilder.cpp  ChunkDrawBuilder.hpp  ChunkMesher.cpp  ChunkMesher.hpp  DrawContext.hpp  Drawable.cpp  Drawable.hpp  GLController.hpp  GlController.cpp  Renderer.hpp
src/graphics/texture/: Atlas.hpp  TIlemap.hpp  Texture.hpp  TextureIO.cpp  TextureIO.hpp  TextureManager.hpp  TextureRegion.hpp  TextureRender.cpp  TextureRender.hpp
src/graphics/tilemap/: Tilemap.hpp  TilemapManager.hpp
src/graphics/vertex/: VertexBuffer.hpp  VertexConsumer.cpp  VertexConsumer.hpp  VertexInfo.hpp
src/lighting/: LightCompressor.cpp  LightInfo.hpp  LightMap.cpp  LightMap.hpp  LightSolver.cpp  LightSolver.hpp
src/loaders/: ChunkIO.cpp  ChunkIO.hpp  Texture_loader.cpp  Texture_loader.hpp
src/logic/: Client.cpp  Client.hpp  LogicSystem.cpp  LogicSystem.hpp  Server.cpp  Server.hpp  ServerCommunication.hpp  World.cpp  World.hpp
src/manager/: Manager.hpp
src/noise/: PerlinNoise.cpp  PerlinNoise.hpp  SimplexNoise.cpp  perlin_noise.cpp  perlin_noise2d.cpp  perlin_noise3d.cpp
src/stream/: ChunkIO.hpp
src/structures/: PackedFreelist.hpp  RingBuffer.hpp  ThreadPool.hpp
src/window/: Events.cpp  Window.cpp
(+23 files in other folders)
